--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   image_picker: ^1.0.7
+  rename: ^3.0.1
 
 dev_dependencies:
   flutter_test:
