--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_carousel_widget: ^2.2.0
   flutter_localizations:
     sdk: flutter
   image_picker: ^1.0.7
